added sprite plugin

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -38,6 +38,6 @@ html(lang="en")
                 color: black;
             }
     body
-        h1 Индексная страница
+        h1 Index page
         ul#links-list
         script(type="module", src="/index.js")
