--- a/src/pages/main/index.pug
+++ b/src/pages/main/index.pug
@@ -1,9 +1,6 @@
-doctype html
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Vite App
-  body
-    #app
-    script(type="module", src="/main/main.js")
+extends ../../utils/templates
+block title
+  title Page 2
+block content
+  #app
+  script(type="module", src="/main/main.js")
