--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
   head
     meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(content="width=device-width, initial-scale=1.0", name="viewport")
     title Vite App
     style(type="text/css").
       body {
@@ -40,4 +40,4 @@ html(lang="en")
   body
     h1 Index page
     ul#links-list
-    script(type="module", src="/index.js")
+    script(src="/index.js", type="module")
