--- a/src/utils/templates.pug
+++ b/src/utils/templates.pug
@@ -4,7 +4,7 @@ doctype html
 html(lang="en")
   head
     meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(content="width=device-width, initial-scale=1.0", name="viewport")
     block title
 
   body
