--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -40,4 +40,4 @@ html(lang="en")
   body
     h1 Index page
     ul#links-list
-    script(src="/index.js", type="module")
+    script(src="/pages/index.js", type="module")
