--- a/src/pages/main/index.pug
+++ b/src/pages/main/index.pug
@@ -3,4 +3,4 @@ block title
   title Page 2
 block content
   #app
-  script(src="/main/main.js", type="module")
+  script(src="/pages/main/main.js", type="module")
