--- a/src/utils/templates.pug
+++ b/src/utils/templates.pug
@@ -5,6 +5,7 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(content="width=device-width, initial-scale=1.0", name="viewport")
+    link(href="/styles/style.scss", rel="stylesheet")
     block title
 
   body
