updated project structure

--- a/src/utils/templates.pug
+++ b/src/utils/templates.pug
@@ -5,7 +5,9 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(content="width=device-width, initial-scale=1.0", name="viewport")
+    link(href="/utils/main.scss", rel="stylesheet")
     block title
 
   body
     block content
+    script(src="/utils/main.js", type="module")
